# pixelrun

./: .gitmodules  CMakeLists.txt  CMakePresets.json
include/: shader_binding.hpp
include/glad/: glad.h
include/levels/: general.hpp  main_menu.hpp
src/: glad.c  main.cpp  main_menu.cpp  shader_binding.cpp
src/levels/: level1.lua  mainmenu.lua
src/shaders/: default.frag  default.vert
